[package]
name = "majsoul_max_rs"
version = "0.6.7"
edition = "2024"

[lib]

[[bin]]
name = "majsoul_max_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-lc-rs = { version = "1", features = ["bindgen"] }
anyhow = "1"
base64 = "0.22"
bytes = "1"
prost-reflect = { version = "0.16", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing = "0.1"
prost = "0.14"
hudsucker = "0.23"
const_format = "0.2"
rand = "0.9"

[build-dependencies]
prost-build = "0.14"
