[package]
name = "majsoul_max_rs"
version = "0.6.9"
edition = "2024"

[lib]

[[bin]]
name = "majsoul_max_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes = { version = "1", default-features = false }
prost-reflect = { version = "0.16", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "__rustls",
    "json",
], default-features = false }
serde_json = "1"
serde = { version = "1", default-features = false }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "fmt",
], default-features = false }
tracing = { version = "0.1", default-features = false }
prost = { version = "0.14", default-features = false }
hudsucker = { version = "0.23", features = [
    "rcgen-ca",
    "rustls-client",
], default-features = false }
const_format = "0.2"
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
url = { version = "2", features = ["serde"], default-features = false }

[build-dependencies]
prost-build = { version = "0.14", default-features = false }
